--- a/projects/eshop-test1/src/app/gx-form.basic.scss
+++ b/projects/eshop-test1/src/app/gx-form.basic.scss
@@ -62,8 +62,8 @@
 
 ::ng-deep .custom1 {
     .id1, .id2 {
-        width: 44%;
-        display: inline-block;
+        width: 80%;
+        // display: inline-block;
         label {
             width: 100%;
         }
