--- a/projects/gx-dynamic-form/src/lib/gx-controls/gx-mat/gx-mat-input/gx-mat-input.component.html
+++ b/projects/gx-dynamic-form/src/lib/gx-controls/gx-mat/gx-mat-input/gx-mat-input.component.html
@@ -1,7 +1,7 @@
-<mat-form-field [formGroup]='parent' [class] = "layout.id" 
-  [ngClass]="cssClass['mat-form-field']" [ngStyle] = "cssStyle['mat-form-field']">
-  <input matInput [class]='layout.id' [ngClass] = "cssClass['input']"
-  [placeholder]='layout.placeholder' [ngStyle]="cssStyle['input']"
-  [formControlName]='layout.name' [value]="layout.value">
-</mat-form-field>
-<app-gx-error [layout]="layout" [parent]="parent"></app-gx-error>
+<!-- <span > -->
+  <mat-form-field [formGroup]='parent' [class]="layout.id" [ngClass]="cssClass['mat-form-field']" [ngStyle]="cssStyle['mat-form-field']">
+    <input matInput [class]='layout.id' [ngClass]=" cssClass[ 'input'] " [placeholder]='layout.placeholder' [ngStyle]="cssStyle[
+    'input'] " [formControlName]='layout.name' [value]="layout.value ">
+  </mat-form-field>
+  <!-- <app-gx-error [layout]="layout " [parent]="parent "></app-gx-error> -->
+<!-- </span> -->
