--- a/projects/eshop-test1/src/app/gx-dynamic-form/gx-controls/gx-mat/gx-mat-input/gx-mat-input.component.html
+++ b/projects/eshop-test1/src/app/gx-dynamic-form/gx-controls/gx-mat/gx-mat-input/gx-mat-input.component.html
@@ -1,6 +1,6 @@
 <mat-form-field [formGroup]='parent' [class]="layout.id" [ngClass]="cssClass['mat-form-field']" appearance='legacy' [ngStyle]="cssStyle['mat-form-field']">
-  <mat-label [class]="cssClass['mat-label']" [ngStyle]="cssStyle['mat-label']">{{layout.label}}</mat-label>
-  <input matInput [class]='layout.id' [ngClass]="cssClass['input']" [placeholder]='layout.placeholder' [ngStyle]="cssStyle[
+  <mat-label [ngClass]="cssClass['mat-label']" [ngStyle]="cssStyle['mat-label']">{{layout.label}}</mat-label>
+  <input matInput [ngClass]="cssClass['input']" [placeholder]='layout.placeholder' [ngStyle]="cssStyle[
     'input'] " [formControlName]='layout.name' [value]="layout.value">
   <mat-error *ngIf="(control.invalid || control.errors) && (control.touched || control.dirty)">{{messages}}</mat-error>
 </mat-form-field>
