--- a/projects/eshop-test1/src/app/gx-form.basic.scss
+++ b/projects/eshop-test1/src/app/gx-form.basic.scss
@@ -63,6 +63,10 @@
     .label-name {
         width: 40%;
     }
+    //for div container having a button which is to be right aligned
+    .button-right {
+        text-align: right;
+    }
 }
 
 ::ng-deep .basic-style-2 {
