--- a/projects/eshop-test1/src/app/gx-dynamic-form/gx-controls/gx-core/gx-button/gx-button.component.html
+++ b/projects/eshop-test1/src/app/gx-dynamic-form/gx-controls/gx-core/gx-button/gx-button.component.html
@@ -1,7 +1,5 @@
-<div [class] = "layout.id + '-box'">
-  <button (click) = 'buttonClicked()' [class] = 'layout.id' [ngClass] = 'layout.class'
-          [ngStyle] = 'layout.style'
-          type='button' [id]='layout.id'>
-          {{layout.label}}
+<div [class]="layout.id" [ngClass]='cssClass.div' [ngStyle]='cssStyle.div'>
+  <button (click)='buttonClicked()' [ngClass]="cssClass.button" [ngStyle]='cssStyle.button' type='button' [id]='layout.id'>
+    {{layout.label}}
   </button>
-  </div>
+</div>
