--- a/projects/repair-it/src/app/contact/contact.component.scss
+++ b/projects/repair-it/src/app/contact/contact.component.scss
@@ -40,9 +40,10 @@
         {
             border-radius: 4px;
             float: right;
-            background: #4387fd;
+            background: #bbb9b9;
             transform: inherit;
             position:inherit;
+            font-weight: bold;
         }
     }  
 }
