--- a/projects/repair-it/src/app/header/header.component.html
+++ b/projects/repair-it/src/app/header/header.component.html
@@ -11,6 +11,9 @@
       </li>
     </ul>
   </div>
+  <div *ngIf="showMenu" class="brand-name">
+    {{brand}}
+  </div>
 </nav>
 <div class=info>
  {{headerData.info}}
