--- a/projects/repair-it/src/app/repair/repair.component.scss
+++ b/projects/repair-it/src/app/repair/repair.component.scss
@@ -44,9 +44,10 @@
         {
             border-radius: 4px;
             float: right;
-            background: #4387fd;
+            background: #bbb9b9;
             transform: inherit;
             position:inherit;
+            font-weight: bold;
         }
     }  
 } 
