--- a/projects/repair-it/src/app/contact/contact.component.html
+++ b/projects/repair-it/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
         {{info}}
       </td>
     </tr>
-    <tr class="row">
+    <tr class="table-row">
       <td class="label-column">
         <label>Name <span class="required">*</span></label>
       </td>
@@ -13,7 +13,7 @@
         <input class="name" type="text" required name="name" placeholder="Your Name" [(ngModel)]="bindingObj.name">
       </td>
     </tr>
-    <tr class="row">
+    <tr class="table-row">
       <td class="label-column">
         <label>Mobile <span class="required">*</span></label>
       </td>
@@ -21,7 +21,7 @@
         <input class="mobile" type="text" pattern="[0-9]*" required placeholder="Your Mobile" name="mobile" minlength="10" maxlength="10" [(ngModel)]="bindingObj.mobile">
       </td>
     </tr>
-    <tr class="row">
+    <tr class="table-row">
       <td class="label-column">
         <label>Email <span class="required">*</span></label>
       </td>
@@ -29,7 +29,7 @@
         <input class="email" type="email" required placeholder="Your Email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" name="email" [(ngModel)]="bindingObj.email">
       </td>
     </tr>
-    <tr class="row">
+    <tr class="table-row">
       <td class="label-column">
         <label>Message <span class="required">*</span></label>
       </td>
