--- a/projects/repair-it/src/app/header/header.component.html
+++ b/projects/repair-it/src/app/header/header.component.html
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">{{headerData.title}}</a>
+  <a class="navbar-brand" href="#">{{headerData.title}}  <i class="fa fa-home"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div *ngIf="showMenu" class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item" [ngClass]="{'active': selectedMenu == 'Home'}">
+        <a class="nav-link" (click)="navigate('Home')" [routerLinkActive]="['active']">{{brand}}</a>
+      </li>
       <li class="nav-item" *ngFor="let menu of menus" [ngClass]="{'active': selectedMenu == menu}">
         <a class="nav-link" (click)="navigate(menu)" [routerLinkActive]="['active']">{{menu}}</a>
       </li>
