--- a/projects/repair-it/src/app/app.component.scss
+++ b/projects/repair-it/src/app/app.component.scss
@@ -5,11 +5,12 @@
     .header
     {
         height:13%;
+        min-height: 85px;
     }
     .content
     { 
         height: 80.5%;
-        background: #e4dfdf;
+        background: #f3f3e1;
     }
     .footer
     {
