--- a/projects/repair-it/src/app/gallery/gallery.component.scss
+++ b/projects/repair-it/src/app/gallery/gallery.component.scss
@@ -8,9 +8,9 @@
         float:left;
         width: 200px;
         height: 200px;
-        margin-left: 21px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-left: 1.5%;
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
 }
 
