--- a/projects/repair-it/src/app/repair/repair.component.scss
+++ b/projects/repair-it/src/app/repair/repair.component.scss
@@ -13,7 +13,6 @@
             font-size: 0.8em;
             text-align: justify;
             padding-bottom: 12px;
-            color: #1b2598;
         }
         .table-row
         {
@@ -45,7 +44,8 @@
         {
             border-radius: 4px;
             float: right;
-            background: #bbb9b9;
+            background: black;
+            color: white;
             transform: inherit;
             position:inherit;
             font-weight: bold;
