--- a/projects/repair-it/src/app/contact/contact.component.scss
+++ b/projects/repair-it/src/app/contact/contact.component.scss
@@ -64,7 +64,7 @@
     color: white;
 }
 
-.mat-raised-button[disabled][disabled] {
+.mat-raised-button[disabled] {
     background-color: gray!important;
 }
 
