--- a/projects/repair-it/src/app/repair/repair.component.scss
+++ b/projects/repair-it/src/app/repair/repair.component.scss
@@ -68,7 +68,7 @@
     color: white;
 }
 
-.mat-raised-button[disabled][disabled] {
+.mat-raised-button[disabled] {
     background-color: gray!important;
 }
 
