--- a/projects/capital-chowringhee/src/app/header/header.component.html
+++ b/projects/capital-chowringhee/src/app/header/header.component.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">{{headerData.title}}  <i class="fa fa-home"></i></a>
+<nav class="navbar navbar-expand-lg navbar-light menubar">
+  <a class="navbar-brand" href="#"><strong>{{headerData.title}}</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" *ngFor="let menu of menus" [ngClass]="{'active': selectedMenu == menu}">
-        <a class="nav-link" (click)="navigate(menu)" [routerLinkActive]="['active']">{{menu}}</a>
+      <li class="nav-item" *ngFor="let menu of menus" [ngClass]="{'active': selectedMenu == menu.path}">
+        <a class="nav-link" (click)="navigate(menu.path)" [routerLinkActive]="['active']"><strong>{{menu.name}}</strong></a>
       </li>
     </ul>
   </div>
