--- a/projects/capital-chowringhee/src/app/home/home.component.html
+++ b/projects/capital-chowringhee/src/app/home/home.component.html
@@ -1,9 +1,22 @@
+<div id="carousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel" *ngFor="let c of carousel;let i = index" attr.data-slide-to="{{i}}" ngClass="i == 0 ? 'active' : ''"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="carousel-item" *ngFor="let c of carousel;let k = index" [ngClass]="k == 0 ? 'item active' : 'item'">
+            <img class="d-block img-fluid carousel-image" [src]="c">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>      
+
 <div class="home">
-  <div class="home-content">
-    <div class="title">{{bindingObj.title}}</div>
-    <div class="details">{{bindingObj.content}}</div>
-  </div>
-  <div class="google-map">
-      <iframe class="map" [src]="bindingObj.location | safe: 'resourceUrl'" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
+    <div [innerHTML]="content"></div>
 </div>
