--- a/projects/capital-chowringhee/src/app/home/home.component.scss
+++ b/projects/capital-chowringhee/src/app/home/home.component.scss
@@ -1,36 +1,15 @@
+.carousel
+{
+    width: 100%;
+    .carousel-image
+    {
+        width: 100%;
+        height: 190px; 
+    }
+}
 .home
 {
-    width:100%;
-    .home-content 
-    {
-        width: 50%;
-        height: 80.5vh;
-        float:left;
-        .title
-        {
-            border: .5px solid black;
-            font-size: 3em;
-            text-align: center;
-            height: 12vh;
-        }
-        .details
-        {
-            border: .5px solid black;
-            height: 68.5vh;
-            padding: 40px;
-            text-align: justify;
-        }
-    }
-    .google-map
-    {
-        width: 50%;
-        height: 80.5vh;
-        float:left;
-        border: .5px solid black;
-        .map
-        {
-            width:100%;
-            height:80vh;
-        }
-    }
+    width: 100%;
+    padding: 30px;
+    text-align: justify;
 }
