--- a/projects/capital-chowringhee/src/app/app.component.html
+++ b/projects/capital-chowringhee/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="display-content">
   <div class="header">
     <app-header></app-header>
   </div>
@@ -6,6 +6,6 @@
     <router-outlet></router-outlet>
   </div>
   <div class="footer">
-      <p>&copy; 2018, KUSH INFOTECH</p>
+      &copy; 2018, KUSH INFOTECH
   </div>
 </div>
