--- a/projects/capital-chowringhee/src/app/app.component.scss
+++ b/projects/capital-chowringhee/src/app/app.component.scss
@@ -1,21 +1,25 @@
-.content
+.display-content
 {
-    // height: 100vh;
     width: 100vw;
+    height: 94.9vh;
     .header
     {
-        height: 8%;
-        min-height: 56px;
+        position: fixed;
+        width: 100%;
     }
     .content
     { 
-        min-height: 565px;
-        background: #e9e6ef;
+        height: 100.5%;
+        width: 100%;
+        background: #dee2c8;
+        padding-top: 58px;
+        padding-bottom: 22px;
+        display: inline-table;
     }
     .footer
     {
-        height: 40px;
-        background:#9575cd;
+        height: 5%;
+        background:#e5e692;
         text-align: center;
         color: black;
     }
