--- a/projects/capital-chowringhee/src/app/home/home.component.scss
+++ b/projects/capital-chowringhee/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .carousel
 {
     width: 100%;
+    height: 30%;
     .carousel-image
     {
         width: 100%;
@@ -10,5 +11,7 @@
 .home
 {
     text-align: justify;
-    height:100%;
+    height: 70%;
+    padding: 32px 30px 0px 30px;
 }
+
