--- a/projects/login/src/app/app.component.html
+++ b/projects/login/src/app/app.component.html
@@ -25,5 +25,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button (click)="login()" color="primary" class="text">Login</button>
+    <div style="margin: 10px;"></div>
+    <button mat-raised-button (click)="register()" color="primary" class="text">Register</button>
   </mat-card-actions>
 </mat-card>
