--- a/projects/login/src/app/app.component.html
+++ b/projects/login/src/app/app.component.html
@@ -24,8 +24,11 @@
     <!-- <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner> -->
   </mat-card-content>
   <mat-card-actions>
+    <div style="margin: 10px;"></div>
     <button mat-raised-button (click)="login()" color="primary" class="text">Login</button>
     <div style="margin: 10px;"></div>
     <button mat-raised-button (click)="register()" color="primary" class="text">Register</button>
+    <div style="margin: 10px;"></div>
+    <button mat-raised-button (click)="verifyToken()" color="primary" class="text">Verify Token</button>
   </mat-card-actions>
 </mat-card>
